change unique email to unique username
